--- a/.htaccess
+++ b/.htaccess
@@ -1,20 +1,56 @@
+# 1 Month for most static assets
+<filesMatch ".(jpg|jpeg|png|gif|js|ico)$">
+Header set Cache-Control "max-age=2592000, public"
+# 2592000 seconds = 1 month
+</filesMatch>
+
+#The max-age is expressed in seconds.
+
+#Common max-age values are:
+
+ #   One minute: max-age=60
+ #   One hour: max-age=3600
+ #   One day: max-age=86400
+ #   One week: max-age=604800
+ #   One month: max-age=2628000
+ #   One year: max-age=31536000 
+
+#When using max-age to define your cache times one should consider the file type and how it is used.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 ## EXPIRES CACHING ##
-<IfModule mod_expires.c>
-ExpiresActive On
+#<IfModule mod_expires.c>
+#ExpiresActive On
 
-ExpiresByType image/jpg "access 1 year"
-ExpiresByType image/jpeg "access 1 year"
-ExpiresByType image/gif "access 1 year"
-ExpiresByType image/png "access 1 year"
+#ExpiresByType image/jpg "access 1 year"
+#ExpiresByType image/jpeg "access 1 year"
+#ExpiresByType image/gif "access 1 year"
+#ExpiresByType image/png "access 1 year"
 
-ExpiresByType application/pdf "access 1 month"
-ExpiresByType text/x-javascript "access 1 month"
-ExpiresByType application/x-shockwave-flash "access 1 month"
-ExpiresByType image/x-icon "access 1 year"
+#ExpiresByType application/pdf "access 1 month"
+#ExpiresByType text/x-javascript "access 1 month"
+#ExpiresByType application/x-shockwave-flash "access 1 month"
+#ExpiresByType image/x-icon "access 1 year"
 
 
-ExpiresDefault "access 1 month"
-</IfModule>
+#ExpiresDefault "access 1 month"
+#</IfModule>
 
 ## EXPIRES CACHING ##
 
